username + identicon + image support + extract common code

--- a/src/components/CommentBox.styl
+++ b/src/components/CommentBox.styl
@@ -1,5 +1,41 @@
 .commentBox
     padding: 15px
+    position: relative
+
+.identiconBox
+    position: absolute 
+    top: 20px
+    left: 18px
+    border-radius: 50%
+    width: 32px
+    height: 32px
+    vertical-align: top
+    overflow: hidden
+
+.identicon
+    position: absolute
+    top: 0
+    left: 0
+
+.usernameBox
+    display: block
+    padding: 10px
+    border: 1px solid silver
+    margin-bottom: 15px
+    margin-left: 44px
+    border-radius: 4px
+    vertical-align: top
+
+.username
+    display: block
+    font-family: 'Cousine', monospace
+    width: 100%
+    box-sizing: border-box
+    box-shadow: 0
+    outline: 0
+    resize: none
+    border: 0
+    font-size: 18px
 
 .textareaBox
     padding: 10px
