--- a/src/components/Records.styl
+++ b/src/components/Records.styl
@@ -4,6 +4,14 @@
     overflow-y: auto
     height: 100%;
 
+.imageBox
+    display: inline-block
+    height: auto
+    padding: 20px
+    border: 1px solid rgba(0,0,0,0.25)                                                                   
+    border-radius: 6px                                                                                   
+    margin-bottom: 15px                                                                                  
+
 .lineBox
     position: relative                                                                                   
     height: 26px                                                                                         
