--- a/src/components/UserRecords.styl
+++ b/src/components/UserRecords.styl
@@ -11,12 +11,34 @@
     margin-bottom: 15px                                                                                  
     font-size: 20px         
 
+.identiconBox
+    position: absolute
+    top: 1px
+    left: 12px 
+    border-radius: 50%
+    position: relative
+    width: 24px
+    height: 24px
+    vertical-align: middle 
+    overflow: hidden
+
+.identicon
+    position: absolute
+    top: 0
+    left: 0
+
+.username
+    display: inline-block
+    vertical-align: middle
+    position: relative
+    top: 2px
+
 .line, .username
     position: absolute                                                                                   
     left: 0                                                                                              
     top: 50%                                                                                             
     transform: translateY(-50%)                                                                          
-    padding: 0 15px                                                                                      
+    padding: 2px 15px 0                                                                                      
     max-width: 100%                                                                                      
     overflow: hidden                                                                                     
     text-overflow: ellipsis                                                                              
@@ -25,3 +47,4 @@
 
 .username
     font-weight: 600
+    padding-left: 42px
