show reload button

--- a/src/common.styl
+++ b/src/common.styl
@@ -9,3 +9,15 @@ body
     padding: 0 !important
     height: 100%
 
+button
+    font-family: 'Cousine', monospace                                                                
+    border: 0
+    background: 0
+    font-weight: 600
+    cursor: pointer
+
+button:hover
+    text-decoration: underline
+
+button:focus
+    outline: 0
