fix chrome scroll issue

--- a/src/components/Records.styl
+++ b/src/components/Records.styl
@@ -4,6 +4,7 @@
     overflow-y: auto
     height: 100%;
     box-sizing: border-box;
+    will-change: transform
 
 .imageBox
     display: inline-block
