shrink image width

--- a/src/components/Records.styl
+++ b/src/components/Records.styl
@@ -3,7 +3,7 @@
     flex: 1
     overflow-y: auto
     height: 100%;
-    box-sizing: border-box;
+    box-sizing: border-box
     will-change: transform
 
 .imageBox
