create two record boxes

--- a/src/components/App.styl
+++ b/src/components/App.styl
@@ -11,3 +11,14 @@
     width: 440px
     border-left: 1px solid silver
     max-width: 40%
+
+.records
+    display: flex
+    height: 100%
+
+.wordRecords
+    flex: 1 
+
+.imageRecords
+    flex: 1 
+    
